<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="499dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSSID"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_ssid"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSSID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBSSID"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_bssid"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etBSSID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_password"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confignet"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRed"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/label_red"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sbRed"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvGreen"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/label_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sbGreen"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBlue"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:text="@string/label_blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sbBlue"
                android:layout_width="450dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:max="255" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_data"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>